--- a/notify_client_android/app/src/main/AndroidManifest.xml
+++ b/notify_client_android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
     <!--允许应用程序完全使用网络-->
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <!--允许应用程序使用震动-->
+    <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
